--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.3",
+    "create": "^0.0.2",
+    "css": "^3.0.0",
+    "hover": "^3.0.0-alpha.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hover-css": "^1.1.0",
     "react-scripts": "4.0.3",
     "tachyons": "^4.12.0",
     "web-vitals": "^1.1.2"
