--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "bootstrap": "^5.1.3",
     "create": "^0.0.2",
     "css": "^3.0.0",
+    "firebase": "^9.1.3",
     "hover": "^3.0.0-alpha.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-firebase-hooks": "^3.0.4",
     "react-hover-css": "^1.1.0",
     "react-scripts": "4.0.3",
     "tachyons": "^4.12.0",
